# ComfyUI-Aholo-World-Generate

./: .comfyignore  .gitignore  LICENSE  README.md  README.zh-CN.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
aholo_world_generate/: extension.py
aholo_world_generate/client/: asset_upload.py  ous_upload.py  world_api.py  world_poll.py
aholo_world_generate/nodes/: generate.py  wait.py
aholo_world_generate/util/: config.py  errors.py  image_tensor.py
examples/: spatial_gen_prompt.api.json  spatial_gen_prompt.json  spatial_gen_prompt_image.api.json  spatial_gen_prompt_image.json
scripts/: smoke_generate.py  smoke_upload.py  validate_examples.py
tests/: test_boundary_errors.py  test_image_tensor.py  test_ous_upload.py  test_sdk_adapters.py  test_upload_live.py  test_world_detail.py  test_world_poll.py
