[project]
name = "aholo-world-generate"
version = "1.1.1"
description = "Aholo Spatial Gen for ComfyUI: text-to-3D and image-to-3D space generation. Get API Key at https://labs.aholo3d.cn/api-keys (China) or https://labs.aholo3d.com/api-keys (Global)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/manycoretech/ComfyUI-Aholo-World-Generate"
Documentation = "https://github.com/manycoretech/ComfyUI-Aholo-World-Generate#readme"
"Bug Tracker" = "https://github.com/manycoretech/ComfyUI-Aholo-World-Generate/issues"

[project.optional-dependencies]
dev = [
    "numpy",
    "pillow",
    "pytest>=8.0.0",
    "torch",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["aholo_world_generate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Register at https://registry.comfy.org → create publisher → paste PublisherId below
[tool.comfy]
PublisherId = "manycoretech"
DisplayName = "Aholo World Generate"
requires-comfyui = ">=0.3.0"
